Fixes #13. Updates styles for Search input field so submit button is Accessible and visible at all times. Shortens search field placeholder text.

--- a/develop/scss/partials/_common-classes.scss
+++ b/develop/scss/partials/_common-classes.scss
@@ -136,7 +136,10 @@
 .entry-content .search-form,
 .site-header .search-form {
   margin-bottom: 40px;
-  width: 50%;
+  width: 100%;
+  @include media($screen--m) {
+      width: 50%;
+  }
 }
 
 .genesis-nav-menu .search input[type="submit"],
@@ -178,10 +181,29 @@ input:focus:-ms-input-placeholder {
 
 }
 
-.widget_search .search-form input[type="submit"] {
-  height: 20px;
-  width: 20px;
-  //  background-color: transparent;
+.widget_search input[type="submit"] {
+	border: 0;
+	clip: rect(0, 0, 0, 0);
+	height: 1px;
+	margin: -1px;
+	padding: 0;
+	position: absolute;
+	width: 1px;
+}
+
+.widget_search .search-form input[type="submit"]:focus {
+    background: #fff;
+	box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.6);
+	clip: auto !important;
+	color: #333;
+	display: block;
+	font-size: 1em;
+	font-weight: 700;
+	height: auto;
+	padding: 15px 23px 14px;
+	text-decoration: none;
+	width: auto;
+	z-index: 100000; /* Above WP toolbar. */
 }
 
 .widget_search .search-form input[type="submit"]:hover {
@@ -194,17 +216,6 @@ input:focus:-ms-input-placeholder {
   height: 20px;
 }
 
-.widget_search .search-form input[type="submit"] {
-  // background: url("images/icon-search.svg") no-repeat;
-  //  background-image: svg("svg-icons.svg#icon-search", "[fill]: #{$base-color-3}");
-}
-
-.search-submit {
-  // background-image: svg("svg-icons.svg#icon-search", "[fill]: #{$white}");
-  // background-repeat: no-repeat;
-  //
-  // padding: 10px;
-}
 /* ## Titles
 --------------------------------------------- */
 
