--- a/style.css
+++ b/style.css
@@ -940,7 +940,7 @@ body.content-sidebar .site-inner > #container {
 .entry-content .search-form,
 .site-header .search-form {
   margin-bottom: 40px;
-  width: 50%;
+  width: 100%;
 }
 
 .genesis-nav-menu .search input[type="submit"],
@@ -983,9 +983,30 @@ input:focus:-ms-input-placeholder {
   font-size: 1.4rem;
 }
 
-.widget_search .search-form input[type="submit"] {
-  height: 20px;
-  width: 20px;
+.widget_search input[type="submit"] {
+  border: 0;
+  clip: rect(0, 0, 0, 0);
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  position: absolute;
+  width: 1px;
+}
+
+.widget_search .search-form input[type="submit"]:focus {
+  background: #fff;
+  box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.6);
+  clip: auto !important;
+  color: #333;
+  display: block;
+  font-size: 1em;
+  font-weight: 700;
+  height: auto;
+  padding: 15px 23px 14px;
+  text-decoration: none;
+  width: auto;
+  z-index: 100000;
+  /* Above WP toolbar. */
 }
 
 .widget_search .search-form input[type="submit"]:hover {
@@ -3182,6 +3203,10 @@ img.circle {
   .after-entry,
   .author-box{
     padding: 30px;
+  }
+  .entry-content .search-form,
+  .site-header .search-form{
+    width: 50%;
   }
   .archive-title,
   .site-inner > .entry-title{
